--- a/jicofo/Dockerfile
+++ b/jicofo/Dockerfile
@@ -46,3 +46,8 @@ LABEL maintainer="Dave Conroy <dave at tiredofit dot ca>"
 
 ### Add Files
   ADD install /
+  
+### https://docs.openshift.org/latest/creating_images/guidelines.html#openshift-specific-guidelines   
+  RUN chgrp -R 0 /usr/src/jicofo && \
+    chmod -R g=u /usr/share/jicofo
+  USER 1001
